use-cases/two-tier-architectures/multi-tenancy/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-tenant1
  namespace: tenant1
  annotations:
    cis.f5.com/ipamLabel: tenant1  
spec:
  type: LoadBalancer 
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  - port: 443
    targetPort: 443
    protocol: TCP
    name: https
  selector:
    app: nginx-tenant1
---

apiVersion: v1
kind: Service
metadata:
  name: nginx-tenant2
  namespace: tenant2
  annotations:
    cis.f5.com/ipamLabel: tenant2
spec:
  type: LoadBalancer 
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  - port: 443
    targetPort: 443
    protocol: TCP
    name: https
  selector:
    app: nginx-tenant2
